--- a/Ejemplos - Librerías de visualización.ipynb
+++ b/Ejemplos - Librerías de visualización.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -26,17 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/milagro/anaconda2/envs/env35/lib/python3.5/site-packages/urllib3/connectionpool.py:852: InsecureRequestWarning:\n",
-      "\n",
-      "Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "\n"
+      "/home/rodixxi/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  InsecureRequestWarning)\n"
      ]
     },
     {
@@ -2061,13 +2057,7 @@
       "diciendo:\n",
       "«quinientos\n",
       "juntos\n",
-      "»llevará\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "»llevará\n",
       "el\n",
       "que\n",
       "se\n",
@@ -2530,7 +2520,13 @@
       "carnes\n",
       "al\n",
       "verlo\n",
-      "volando\n",
+      "volando\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "al\n",
       "viento\n",
       "la\n",
@@ -3856,13 +3852,7 @@
       "qué\n",
       "querés\n",
       "recebir\n",
-      "755\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "755\n",
       "»si\n",
       "no\n",
       "has\n",
@@ -4535,7 +4525,13 @@
       "al\n",
       "gringo\n",
       "la\n",
-      "noche\n",
+      "noche\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "entera\n",
       "lo\n",
       "harté\n",
@@ -6494,16 +6490,6 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/milagro/anaconda2/envs/env35/lib/python3.5/site-packages/urllib3/connectionpool.py:852: InsecureRequestWarning:\n",
-      "\n",
-      "Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -8390,6 +8376,14 @@
       "había\n",
       "puesto.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rodixxi/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  InsecureRequestWarning)\n"
+     ]
     }
    ],
    "source": [
@@ -9834,9 +9828,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env35]",
+   "display_name": "Python [conda env:anaconda3]",
    "language": "python",
-   "name": "conda-env-env35-py"
+   "name": "conda-env-anaconda3-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -9848,7 +9842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
