--- a/Ejemplos - Funciones de densidad.ipynb
+++ b/Ejemplos - Funciones de densidad.ipynb
@@ -412,21 +412,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:edm_env]",
+   "display_name": "Python [conda env:anaconda3]",
    "language": "python",
-   "name": "conda-env-edm_env-py"
+   "name": "conda-env-anaconda3-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
