adiccion de analisis de ejercicio

--- a/Tarea integradora - parte 2.ipynb
+++ b/Tarea integradora - parte 2.ipynb
@@ -134,6 +134,26 @@
    "source": [
     "graphic_normal(mu, sigma, rng)"
    ]
+  }, {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Se puede observar que es un gráfico con forma de campana acompañado de una simetría perceptible, lo cual confirma que es una distribución normal, partiendo de ello consideramos observar el comportamiento modificando los valores de la media (mu), desviación estándar (sigma) y el rango (rng). \n",
+    "\n",
+    "Se procedió a modificar los valores de forma independiente: \n",
+    "\n",
+    "Media\n",
+    "Se logró ver como se traslada la gráfica con forma de campana en el eje x sin presentar deformación, lo cual permite inferir que en las distribuciones normales la media presenta el máximo valor indicando que es el escenario con mayor posibilidad y el descenso de forma simétrica a los lados de la media, en la medida que se aleja de la media indica que los escenarios extremos son menos probables. \n",
+    "\n",
+    "Desviación estándar \n",
+    "Al modificar los valores de sigma se logra ver como la anchura de la campana aumenta y disminuye en relación a la variación de dicho valor, esta variación indica la dispersión de los escenarios que se alejan o se acercan entre sí, aun cuando la media mantenga el mismo valor. Una forma de ver este comportamiento es asociarlo por ejemplo a la frecuencia con que pueden presentarse cada uno los escenarios con respecto a los adyacentes. \n",
+    "\n",
+    "Rango \n",
+    "Alternando los valores del rango se puede captar que los extremos de la campana se acercan a cero en el eje Y sin lograr que alcance el valor 0, por otra parte el rango sí puede afectar la figura de la gráfica, permitiendo presentar un imagen parcial de la misma. Revela que tan importante es contar con un escenario con muestras diversas el cual permite a tener una mejor perspectiva del caso de estudio y a su vez nuestro análisis más acertado.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
