--- a/Tarea integradora - parte 2.ipynb
+++ b/Tarea integradora - parte 2.ipynb
@@ -35,15 +35,11 @@
     "* ¿Cuál es la probabilidad que la computadora funcione entre 50 y 150 horas antes de descomponerse?\n",
     "\n",
     "* ¿Cuál es la probabilidad que una computadora se descomponga antes de registrar 100 horas de uso?"
-   ],"source": [
-    "   from IPython.display import Image\n",
-    "Image(\"estadisticas.png\")\n",
-    "    \n",
-    "   "
-    from IPython.display import Image\n",
-    "Image(\"estadisticas.png\")\n",
-    "    \n",
-    "   "
+	
+   ],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(\"estadisticas.png\")"
    ]
   },
   {
