--- a/Laboratorio 1.ipynb
+++ b/Laboratorio 1.ipynb
@@ -4568,10 +4568,420 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Smoking</th>\n",
+       "      <th>Alcohol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>never</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>never</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>never</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>never</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>977</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>978</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>979</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>980</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>981</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>982</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>983</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>984</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>985</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>986</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>987</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>988</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>991</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>993</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>994</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>never</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>never</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>never</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1004</th>\n",
+       "      <td>former smoker</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1005</th>\n",
+       "      <td>current smoker</td>\n",
+       "      <td>drink a lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1006</th>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1008</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1009</th>\n",
+       "      <td>tried smoking</td>\n",
+       "      <td>social drinker</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>984 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Smoking         Alcohol\n",
+       "0       never smoked     drink a lot\n",
+       "1       never smoked     drink a lot\n",
+       "2      tried smoking     drink a lot\n",
+       "3      former smoker     drink a lot\n",
+       "4      tried smoking  social drinker\n",
+       "5       never smoked           never\n",
+       "6      tried smoking  social drinker\n",
+       "7     current smoker     drink a lot\n",
+       "8      tried smoking  social drinker\n",
+       "9       never smoked     drink a lot\n",
+       "10    current smoker  social drinker\n",
+       "11     tried smoking           never\n",
+       "12     tried smoking  social drinker\n",
+       "13      never smoked  social drinker\n",
+       "14    current smoker  social drinker\n",
+       "15     former smoker  social drinker\n",
+       "16    current smoker     drink a lot\n",
+       "17     tried smoking  social drinker\n",
+       "18     tried smoking  social drinker\n",
+       "19     former smoker     drink a lot\n",
+       "20      never smoked           never\n",
+       "21     tried smoking  social drinker\n",
+       "22     tried smoking  social drinker\n",
+       "23     tried smoking  social drinker\n",
+       "24     tried smoking           never\n",
+       "25     tried smoking  social drinker\n",
+       "26     tried smoking  social drinker\n",
+       "27      never smoked  social drinker\n",
+       "28     former smoker  social drinker\n",
+       "29     tried smoking  social drinker\n",
+       "...              ...             ...\n",
+       "977   current smoker     drink a lot\n",
+       "978    tried smoking  social drinker\n",
+       "979     never smoked  social drinker\n",
+       "980              NaN     drink a lot\n",
+       "981    tried smoking  social drinker\n",
+       "982    tried smoking     drink a lot\n",
+       "983    tried smoking  social drinker\n",
+       "984   current smoker     drink a lot\n",
+       "985    former smoker  social drinker\n",
+       "986    tried smoking  social drinker\n",
+       "987   current smoker     drink a lot\n",
+       "988    tried smoking     drink a lot\n",
+       "991    tried smoking  social drinker\n",
+       "993    former smoker  social drinker\n",
+       "994   current smoker     drink a lot\n",
+       "995    tried smoking           never\n",
+       "996    former smoker  social drinker\n",
+       "997    tried smoking  social drinker\n",
+       "998    tried smoking  social drinker\n",
+       "999     never smoked  social drinker\n",
+       "1000    never smoked           never\n",
+       "1001   former smoker           never\n",
+       "1002  current smoker  social drinker\n",
+       "1003   former smoker  social drinker\n",
+       "1004   former smoker  social drinker\n",
+       "1005  current smoker     drink a lot\n",
+       "1006    never smoked  social drinker\n",
+       "1007   tried smoking  social drinker\n",
+       "1008   tried smoking  social drinker\n",
+       "1009   tried smoking  social drinker\n",
+       "\n",
+       "[984 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "young[[\"Smoking\", \"Alcohol\"]]"
+   ]
   },
   {
    "cell_type": "code",
